--- a/include/css/style.css
+++ b/include/css/style.css
@@ -440,8 +440,9 @@ body {
   line-height: 24px;
   font-weight: 400;
   /* font-family: "Montserrat", sans-serif; */
-  font-family: "Cormorant SC", serif;
-  font-family: "utopia-std-display", serif;
+  /* font-family: "Cormorant SC", serif; */
+  /* font-family: "utopia-std-display", serif; */
+  font-family: 'Lora', serif;
 
   color: #000;
   /* background: #eae8e2; */
@@ -652,7 +653,7 @@ ul:not([class]) > li:last-child {
   color: #243238;
   text-indent: -55px;
   margin-top: 0;
-  background: #fff!important;
+  background: #fff !important;
   transition: all 0.2s ease-out;
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
@@ -678,9 +679,8 @@ ul:not([class]) > li:last-child {
 }
 .collection-toggler-icon:before {
   top: -10px;
-
 }
-.collection-toggler-icon:after  {
+.collection-toggler-icon:after {
   bottom: -10px;
 }
 .collection-toggler {
@@ -705,7 +705,7 @@ ul:not([class]) > li:last-child {
   display: flex;
   align-items: center;
   /* border-bottom: 1px solid #333; */
-  border-bottom: 1px solid hsla(0,0%,100%,.16);
+  border-bottom: 1px solid hsla(0, 0%, 100%, 0.16);
 }
 #header:hover {
   /* background-color: #eae8e2; */
@@ -737,9 +737,9 @@ ul:not([class]) > li:last-child {
 .navbar-brand img {
   /* filter: invert(94%) sepia(21%) saturate(162%) hue-rotate(285deg)
     brightness(30%) contrast(100%); */
-    width: 100%;
-    height: 36px;
-    object-fit: contain;
+  width: 100%;
+  height: 36px;
+  object-fit: contain;
 }
 
 .navbar-expand-xl .navbar-nav .nav-item {
@@ -747,16 +747,16 @@ ul:not([class]) > li:last-child {
 }
 .navbar-expand-xl .navbar-nav .nav-link {
   /* font-size: 18px; */
-  font-size: 16px;
-
+  font-size: 14px;
+  text-transform: uppercase;
   /* line-height: 43px; */
   font-weight: 500;
   color: #fff;
   padding: 0;
   margin: 0;
-  font-family: Barlow, sans-serif !important;
+  font-family: 'Raleway', sans-serif;
   display: block;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
 }
 .navbar-expand-xl .navbar-nav .nav-link:after {
   /* background: #9f664a; */
@@ -828,7 +828,7 @@ ul:not([class]) > li:last-child {
 
 .parsys_column p {
   margin: 0;
-  font-family: Barlow, sans-serif !important;
+  font-family: 'Raleway', sans-serif;
   font-size: 14px;
   font-weight: 500;
   color: #333;
@@ -864,7 +864,6 @@ ul:not([class]) > li:last-child {
     border-bottom: 1px solid var(--header-border-color);
   */
 
- 
   transition: all 0.3s ease-in-out;
 }
 .MegaMenu_collection {
@@ -1013,7 +1012,8 @@ ul:not([class]) > li:last-child {
   transition: 0.4s;
   line-height: 40px;
   width: 0px;
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
+
 }
 .search-box:hover > .search-txt {
   width: 240px;
@@ -1356,12 +1356,12 @@ ul:not([class]) > li:last-child {
     brightness(30%) contrast(100%);
 }
 .fixed .collection-toggler-icon,
-.fixed .collection-toggler-icon:before, 
+.fixed .collection-toggler-icon:before,
 .fixed .collection-toggler-icon:after {
   background: #333 !important;
 }
 .fixed .search-container label {
-  border: 1px solid #333 ;
+  border: 1px solid #333;
 }
 .fixed .search-container button svg path {
   fill: #333;
@@ -1379,7 +1379,7 @@ ul:not([class]) > li:last-child {
   align-items: center;
   justify-content: flex-start;
   background-color: transparent;
-  border: 1px solid hsla(0,0%,100%,.3);
+  border: 1px solid hsla(0, 0%, 100%, 0.3);
   cursor: pointer;
   min-width: 300px;
   flex-direction: row-reverse;
@@ -1392,7 +1392,6 @@ ul:not([class]) > li:last-child {
   border: none;
   padding-left: 8px;
   caret-color: #fff;
-
 }
 
 .search-container button {
@@ -1455,10 +1454,15 @@ ul:not([class]) > li:last-child {
   color: #fff;
 }
 .slider1 .subtitle {
-  font-size: 24px;
+  /* font-size: 24px;
   font-weight: 300;
   margin: 0;
-  white-space: normal;
+  white-space: normal; */
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 2.8125rem;
+  letter-spacing: 0.125rem;
+  text-transform: uppercase;
 }
 
 .slider-title {
@@ -1553,7 +1557,7 @@ ul:not([class]) > li:last-child {
 }
 .product-outer .text-container h2,
 .product-outer .text-container h3 {
-  /* font-family: Barlow, sans-serif !important; */
+  /* font-family: 'Raleway', sans-serif; */
   -o-transition: all 200ms;
   -webkit-transition: all 200ms;
   transition: all 200ms;
@@ -1566,14 +1570,19 @@ ul:not([class]) > li:last-child {
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  font-family: unset;
+  font-size: 0.9375rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 0.0625rem;
+  
+
   font-weight: unset;
   max-width: calc(100% - 8px);
   margin-top: 4px;
 }
 .main-column-content {
   justify-content: space-between;
-  font-family: Barlow, sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 .wrapper-products:hover img {
   transform: scale(1.2);
@@ -1614,7 +1623,6 @@ ul:not([class]) > li:last-child {
   position: relative;
 }
 .banner-content-container {
-
   position: relative;
 }
 .banner-content-container video:before {
@@ -1692,8 +1700,15 @@ ul:not([class]) > li:last-child {
   justify-content: center;
   color: #fff;
 }
+.lookbook-copy h3 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 2.8125rem;
+  letter-spacing: 0.125rem;
+  text-transform: uppercase;
+}
 .lookbook-copy p.lookbook-txt {
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 .explore-content-text {
@@ -1776,7 +1791,8 @@ ul:not([class]) > li:last-child {
   padding: 0;
   letter-spacing: 0.07em;
   font-size: 13px;
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
+
 }
 
 .mem-main ul li:before {
@@ -1892,7 +1908,8 @@ h2.front-header-small {
   color: #333;
   margin-top: 40px;
   margin-bottom: 0;
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
+
 }
 .product-content-container {
   background: #f9f9f9;
@@ -1916,7 +1933,8 @@ h2.front-header-small {
   margin: 0;
 }
 .heading-copy p {
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
+
 }
 
 .trustpilot-logo img {
@@ -1964,7 +1982,8 @@ h2.rv_name {
 }
 
 .top-collect-copy p {
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
+
 }
 .review_rate .stars .rating {
   background: url(../images/explore/rating.svg) no-repeat center;
@@ -1982,7 +2001,7 @@ h2.rv_name {
   margin: 8px 0 10px 0;
 }
 .rv_text {
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 .gallery-content-item {
@@ -2048,7 +2067,8 @@ h2.rv_name {
   color: #333333;
   font-size: 14px;
   margin-bottom: 30px;
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
+
 }
 /* ==================================================================================== */
 /* ============================== parsys_column2-content ============================== */
@@ -2133,6 +2153,14 @@ h2.rv_name {
 .hero1-content-text a {
   color: #fff;
   margin-bottom: 10px;
+
+}
+.hero1-content-text h4 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 2.8125rem;
+  letter-spacing: 0.125rem;
+  text-transform: uppercase;
 }
 /* ==================================================================================== */
 /* ================================ new-arrival-content =============================== */
@@ -2212,6 +2240,13 @@ h2.rv_name {
   font-size: 1.75rem;
   line-height: 2.125rem;
   /* font-family: "Barlow", sans-serif; */
+}
+.heading2 h2 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 2.8125rem;
+  letter-spacing: 0.125rem;
+  text-transform: uppercase;
 }
 /* ============================================================================================== */
 
@@ -2361,7 +2396,8 @@ h2.rv_name {
   font-size: 14px;
   line-height: 28px;
   margin-bottom: 0;
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
+
 }
 .section-title h2 {
   position: relative;
@@ -3252,7 +3288,8 @@ h2.rv_name {
   font-size: 24px;
   font-weight: 400;
   margin: 0 0 5px;
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
+
 }
 .single-grid-product .product-content .title a {
   display: block;
@@ -3267,7 +3304,8 @@ h2.rv_name {
   font-weight: 700;
   color: #1a1a1a;
   margin-bottom: 0;
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
+
   text-transform: capitalize;
 }
 .single-grid-product .product-content p .main-price.discounted del {
@@ -3442,7 +3480,8 @@ h2.rv_name {
 }
 .shop-list-wrap .shop-list-content .product-details-content p {
   margin: 20px 0 0;
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
+
 }
 @media only screen and (max-width: 767px) {
   .shop-list-wrap .shop-list-content .product-details-content p {
@@ -3614,7 +3653,8 @@ h2.rv_name {
   font-size: 16px;
   line-height: 30px;
   margin-top: 20px;
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
+
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .product-details-content .fz-16 {
@@ -3754,14 +3794,16 @@ h2.rv_name {
   display: inline-block;
   float: left;
   margin-right: 5px;
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
+
   font-weight: 600;
 }
 .product-details-content .pro-details-meta ul li {
   margin-right: 2px;
   display: inline-block;
   margin-bottom: 0;
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
+
 }
 .product-details-content .pro-details-meta ul li:last-child {
   margin-right: 0;
@@ -4525,7 +4567,8 @@ h2.rv_name {
   color: #1a1a1a;
   width: 100%;
   height: 100%;
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
+
 }
 .quantity .qtybutton {
   position: absolute;
@@ -4563,7 +4606,8 @@ h2.rv_name {
 .product-details-content .pro-details-sku span {
   color: #343538;
   font-size: 12px;
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
+
 }
 
 /* ============================================================================================== */
@@ -4752,7 +4796,8 @@ h2.rv_name {
 
 #klaviyo_form_msgs p {
   padding-bottom: 20px;
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
+
 }
 
 .input-group .form-control {
@@ -5151,7 +5196,7 @@ h2.rv_name {
     /* padding-top: 60px; */
   }
   .search-container {
-  display: none;
+    display: none;
   }
   .navbar {
     height: 60px;
