--- a/include/css/style.css
+++ b/include/css/style.css
@@ -442,7 +442,7 @@ body {
   /* font-family: "Montserrat", sans-serif; */
   /* font-family: "Cormorant SC", serif; */
   /* font-family: "utopia-std-display", serif; */
-  font-family: 'Lora', serif;
+  font-family: "Lora", serif;
 
   color: #000;
   /* background: #eae8e2; */
@@ -754,7 +754,7 @@ ul:not([class]) > li:last-child {
   color: #fff;
   padding: 0;
   margin: 0;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   display: block;
   letter-spacing: 0.5px;
 }
@@ -828,7 +828,7 @@ ul:not([class]) > li:last-child {
 
 .parsys_column p {
   margin: 0;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 14px;
   font-weight: 500;
   color: #333;
@@ -1012,8 +1012,7 @@ ul:not([class]) > li:last-child {
   transition: 0.4s;
   line-height: 40px;
   width: 0px;
-  font-family: 'Raleway', sans-serif;
-
+  font-family: "Raleway", sans-serif;
 }
 .search-box:hover > .search-txt {
   width: 240px;
@@ -1571,10 +1570,9 @@ ul:not([class]) > li:last-child {
   -webkit-box-orient: vertical;
   overflow: hidden;
   font-size: 0.9375rem;
-    font-weight: 500;
-    text-transform: uppercase;
-    letter-spacing: 0.0625rem;
-  
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.0625rem;
 
   font-weight: unset;
   max-width: calc(100% - 8px);
@@ -1582,7 +1580,7 @@ ul:not([class]) > li:last-child {
 }
 .main-column-content {
   justify-content: space-between;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 .wrapper-products:hover img {
   transform: scale(1.2);
@@ -1708,7 +1706,7 @@ ul:not([class]) > li:last-child {
   text-transform: uppercase;
 }
 .lookbook-copy p.lookbook-txt {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 .explore-content-text {
@@ -1791,8 +1789,7 @@ ul:not([class]) > li:last-child {
   padding: 0;
   letter-spacing: 0.07em;
   font-size: 13px;
-  font-family: 'Raleway', sans-serif;
-
+  font-family: "Raleway", sans-serif;
 }
 
 .mem-main ul li:before {
@@ -1908,8 +1905,7 @@ h2.front-header-small {
   color: #333;
   margin-top: 40px;
   margin-bottom: 0;
-  font-family: 'Raleway', sans-serif;
-
+  font-family: "Raleway", sans-serif;
 }
 .product-content-container {
   background: #f9f9f9;
@@ -1933,8 +1929,7 @@ h2.front-header-small {
   margin: 0;
 }
 .heading-copy p {
-  font-family: 'Raleway', sans-serif;
-
+  font-family: "Raleway", sans-serif;
 }
 
 .trustpilot-logo img {
@@ -1982,8 +1977,7 @@ h2.rv_name {
 }
 
 .top-collect-copy p {
-  font-family: 'Raleway', sans-serif;
-
+  font-family: "Raleway", sans-serif;
 }
 .review_rate .stars .rating {
   background: url(../images/explore/rating.svg) no-repeat center;
@@ -2001,7 +1995,7 @@ h2.rv_name {
   margin: 8px 0 10px 0;
 }
 .rv_text {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 .gallery-content-item {
@@ -2067,8 +2061,7 @@ h2.rv_name {
   color: #333333;
   font-size: 14px;
   margin-bottom: 30px;
-  font-family: 'Raleway', sans-serif;
-
+  font-family: "Raleway", sans-serif;
 }
 /* ==================================================================================== */
 /* ============================== parsys_column2-content ============================== */
@@ -2153,7 +2146,6 @@ h2.rv_name {
 .hero1-content-text a {
   color: #fff;
   margin-bottom: 10px;
-
 }
 .hero1-content-text h4 {
   font-size: 1.5rem;
@@ -2396,8 +2388,7 @@ h2.rv_name {
   font-size: 14px;
   line-height: 28px;
   margin-bottom: 0;
-  font-family: 'Raleway', sans-serif;
-
+  font-family: "Raleway", sans-serif;
 }
 .section-title h2 {
   position: relative;
@@ -3288,8 +3279,7 @@ h2.rv_name {
   font-size: 24px;
   font-weight: 400;
   margin: 0 0 5px;
-  font-family: 'Raleway', sans-serif;
-
+  font-family: "Raleway", sans-serif;
 }
 .single-grid-product .product-content .title a {
   display: block;
@@ -3304,7 +3294,7 @@ h2.rv_name {
   font-weight: 700;
   color: #1a1a1a;
   margin-bottom: 0;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 
   text-transform: capitalize;
 }
@@ -3480,8 +3470,7 @@ h2.rv_name {
 }
 .shop-list-wrap .shop-list-content .product-details-content p {
   margin: 20px 0 0;
-  font-family: 'Raleway', sans-serif;
-
+  font-family: "Raleway", sans-serif;
 }
 @media only screen and (max-width: 767px) {
   .shop-list-wrap .shop-list-content .product-details-content p {
@@ -3653,8 +3642,7 @@ h2.rv_name {
   font-size: 16px;
   line-height: 30px;
   margin-top: 20px;
-  font-family: 'Raleway', sans-serif;
-
+  font-family: "Raleway", sans-serif;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .product-details-content .fz-16 {
@@ -3794,7 +3782,7 @@ h2.rv_name {
   display: inline-block;
   float: left;
   margin-right: 5px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 
   font-weight: 600;
 }
@@ -3802,8 +3790,7 @@ h2.rv_name {
   margin-right: 2px;
   display: inline-block;
   margin-bottom: 0;
-  font-family: 'Raleway', sans-serif;
-
+  font-family: "Raleway", sans-serif;
 }
 .product-details-content .pro-details-meta ul li:last-child {
   margin-right: 0;
@@ -4567,8 +4554,7 @@ h2.rv_name {
   color: #1a1a1a;
   width: 100%;
   height: 100%;
-  font-family: 'Raleway', sans-serif;
-
+  font-family: "Raleway", sans-serif;
 }
 .quantity .qtybutton {
   position: absolute;
@@ -4606,8 +4592,7 @@ h2.rv_name {
 .product-details-content .pro-details-sku span {
   color: #343538;
   font-size: 12px;
-  font-family: 'Raleway', sans-serif;
-
+  font-family: "Raleway", sans-serif;
 }
 
 /* ============================================================================================== */
@@ -4796,8 +4781,7 @@ h2.rv_name {
 
 #klaviyo_form_msgs p {
   padding-bottom: 20px;
-  font-family: 'Raleway', sans-serif;
-
+  font-family: "Raleway", sans-serif;
 }
 
 .input-group .form-control {
@@ -4830,6 +4814,207 @@ h2.rv_name {
   padding: 60px 0;
 }
 /* ================= Content End ================= */
+
+/* ================= Content Start - showroom ================= */
+
+.form-box-container {
+  max-width: 650px;
+  width: 100%;
+  /* margin: 0 auto; */
+  padding: 20px;
+  border-radius: 12px;
+  /* box-shadow: 0 0 5px 5px #00000020; */
+  backdrop-filter: blur(5px);
+  background-color: #ffffff85;
+}
+.form-box-container .form-group {
+  margin-bottom: 20px;
+}
+.form-box-container label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+.form-box-container input[type="text"],
+.form-box-container input[type="email"],
+.form-box-container textarea,
+.form-box-container select,
+.form-box-container input[type="file"] {
+  width: 100%;
+  padding: 10px;
+  /* border: 1px solid #000; */
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+}
+.form-box-container input[type="file"] {
+  border: 1px dashed #000;
+}
+.form-box-container select {
+  appearance: none;
+  background-color: #fff;
+  /* Add dropdown arrow */
+  background-image: url("../images/showroom/arrowbottom.svg"); /* You can replace 'arrow.png' with your arrow image */
+  background-repeat: no-repeat;
+  background-position: 98% center; /* Adjust the position of the arrow */
+}
+.form-box-container textarea {
+  resize: vertical;
+  min-height: 150px;
+}
+/* Style the file input container */
+.form-box-container .file-input-container {
+  text-align: center;
+}
+
+/* Style the file input and hide it */
+.form-box-container .file-input {
+  display: none;
+}
+
+/* Style the file input wrapper */
+.form-box-container .file-input-wrapper {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  /* padding: 10px;
+  border: 1px solid #000;
+  border-radius: 4px;
+  background-color: #fff; */
+}
+
+/* Style the file icon */
+.form-box-container .file-icon {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-image: url("../images/showroom/attachedfile.svg"); /* Replace 'icon.png' with your icon image */
+  background-size: cover;
+  vertical-align: middle;
+  margin-right: 10px; /* Adjust as needed */
+}
+
+/* Style the file label */
+.form-box-container .file-label {
+  display: inline-block;
+  vertical-align: middle;
+}
+.form-box-container .btn-container {
+  text-align: center;
+}
+.form-box-container .file-input-container {
+  text-align: center;
+  border: 1px dashed #000;
+  padding: 10px 20px; /* Adjust padding as needed */
+  border-radius: 4px;
+}
+
+/* Style the file input and hide it */
+.form-box-container .file-input {
+  display: none;
+}
+.form-box-container .btn {
+  background-color: #000;
+  color: #fff;
+  border: none;
+  padding: 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
+}
+.showroom-get-touch-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  /* padding: 40px 0; */
+}
+.showroom-bg {
+  background: url(../images/showroom/showroombg.webp) center no-repeat;
+  /* height: 847px; */
+  background-size: cover;
+}
+.showroom-get-touch-content h2 {
+  width: calc(100% - 650px);
+  text-align: center;
+}
+.shop-info-content {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-direction: row-reverse;
+}
+
+.shop-name h4 {
+  text-transform: uppercase;
+  /* margin: 0; */
+  font-size: 18px;
+  font-family: "Raleway", sans-serif;
+}
+.shop-name p {
+  font-family: "Raleway", sans-serif;
+  font-size: 16px;
+}
+.address,
+.opening-hours,
+.contact-details {
+  font-size: 14px;
+}
+.map-container iframe {
+  width: 800px;
+}
+
+.shop-info {
+  width: calc(100% - 850px);
+  display: grid;
+  gap: 20px;
+}
+.icons-info-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.icons-box img {
+  width: 80px;
+}
+
+.icons-box {
+  margin: 0 auto;
+  text-align: center;
+  color: #fff;
+}
+
+.icons-box p {
+  font-size: 14px;
+  margin: 0;
+  font-family: "Raleway", sans-serif;
+}
+/* ================= Content End - showroom ================= */
+/* ==========================  about usss - ===================================== */
+
+.about-us-main-content {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.about-us-main-text {
+  width: 45%;
+}
+
+.about-us-main-img {
+  width: 48%;
+}
+.about-us-main-text p {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+}
+.about-full-content img {
+  width: 100%;
+}
+/* ============================================================================ */
 
 /* ========================================== 
 ! Large devices (desktops, less than 1200px)
@@ -5169,6 +5354,48 @@ h2.rv_name {
   .header-top {
     padding: 0;
   }
+  .about-us-main-text,
+  .about-us-main-img {
+    width: 100%;
+  }
+  .about-us-main-text p:last-child {
+    margin-bottom: 16px;
+  }
+  .about-us-main-img img {
+    height: 800px;
+    object-fit: cover;
+  }
+  .about-us-main-content {
+    gap: 20px;
+  }
+  .showroom-get-touch-content {
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+  }
+  .shop-info-content {
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 40px;
+
+  }
+  .icons-info-container {
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+  .icons-box {
+    width: 47%;
+  }
+  .shop-info {
+
+    width: 100%;
+    text-align: center;
+
+  }
+  .showroom-get-touch-content h2,
+  .map-container iframe,
+  .map-container {
+    width: 100%;
+  }
   /* ==================== footer ========================== */
   .footer-content {
     flex-wrap: wrap;
@@ -5374,6 +5601,9 @@ h2.rv_name {
   }
   .hero-bg-half-content {
     gap: 30px;
+  }
+  .about-us-main-img img {
+    height: 500px;
   }
 }
 /* ======================================================
