--- a/include/css/style.css
+++ b/include/css/style.css
@@ -743,17 +743,15 @@ ul:not([class]) > li:last-child {
   margin: 0 25px;
 }
 .navbar-expand-xl .navbar-nav .nav-link {
-  /* font-size: 18px; */
-  font-size: 14px;
+  font-size: 18px;
   text-transform: capitalize;
-  /* line-height: 43px; */
+  line-height: 40px;
   font-weight: 500;
   color: #fff;
   padding: 0;
   margin: 0;
-
   display: block;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.9px;
 }
 .navbar-expand-xl .navbar-nav .nav-link:after {
   /* background: #9f664a; */
