--- a/include/css/style.css
+++ b/include/css/style.css
@@ -756,11 +756,19 @@ ul:not([class]) > li:last-child {
   display: block;
   letter-spacing: 0.9px;
 }
-.navbar-expand-xl .navbar-nav .nav-link img {
+.navbar-expand-xl .navbar-nav .nav-link .nav-link-image {
+  overflow: hidden;
   margin-bottom: 20px;
+}
+.navbar-expand-xl .navbar-nav .nav-link img {
   height: 212px;
   width: 100%;
   object-fit: cover;
+  transform: scale(1);
+  transition: opacity 0.3s ease, transform 8s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+.navbar-expand-xl .navbar-nav .nav-link:hover img {
+  transform: scale(1.2);
 }
 /* .navbar-expand-xl .navbar-nav .nav-link:after {
 
