--- a/include/css/style.css
+++ b/include/css/style.css
@@ -4866,6 +4866,11 @@ h2.rv_name {
   backdrop-filter: blur(5px);
   background-color: #fff;
 }
+.form-box-container h4 {
+  text-align: center;
+  line-height: 60px;
+  border-bottom: 1px solid #dddddd;
+}
 .form-box-container .form-group {
   margin-bottom: 20px;
 }
