--- a/include/css/style.css
+++ b/include/css/style.css
@@ -5022,7 +5022,10 @@ h2.rv_name {
 }
 .showroom-content-img {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Adjust the number of columns as needed */
+  grid-template-columns: repeat(
+    3,
+    1fr
+  ); /* Adjust the number of columns as needed */
   gap: 30px;
 }
 
@@ -5079,7 +5082,6 @@ h2.rv_name {
 }
 /* ================= Content End - showroom ================= */
 
-
 /* ============================== contact us ================================ */
 .contact-content-store img {
   width: 500px;
@@ -5105,6 +5107,9 @@ h2.rv_name {
   display: flex;
   gap: 20px;
   padding: 20px 0;
+}
+.contact-content-store a {
+  width: 100%;
 }
 /* =========================================================================== */
 /* ==========================  about usss - ===================================== */
