--- a/include/css/style.css
+++ b/include/css/style.css
@@ -1451,7 +1451,10 @@ ul:not([class]) > li:last-child {
   position: relative;
   height: 100%;
 }
-
+.banner-img img {
+  height: 100vh;
+  object-fit: cover;
+}
 .slider2-text {
   position: absolute;
   top: 50%;
@@ -1490,7 +1493,37 @@ ul:not([class]) > li:last-child {
   font-size: 48px;
   line-height: 60px;
   font-weight: 600;
+  color: transparent;
+  -webkit-text-stroke: 2px #333;
+  transition: all 0.5s;
 }
+.slider-title:hover {
+  color: #333;
+  -webkit-text-stroke: 2px transparent;
+}
+.slider-title:after {
+  background: #333;
+  content: "";
+  display: block;
+  height: 2px;
+  transition: width 0.5s;
+  width: 0;
+}
+.slider-title:hover:after {
+  background: #333;
+  content: "";
+  width: 100%;
+}
+
+.slider-text-banner {
+  color: #333;
+  -webkit-text-stroke: 2px transparent;
+}
+/* .slider-text-banner:hover {
+  -webkit-text-stroke: 2px transparent;
+  color: #fff;
+
+} */
 
 .kh-slide__text-box {
   display: flex;
@@ -5028,12 +5061,65 @@ h2.rv_name {
   ); /* Adjust the number of columns as needed */
   gap: 30px;
 }
+.showroom-text-content p {
+  text-align: center;
+  font-size: 20px;
+  line-height: 34px;
+}
 
+.showroom-text-content {
+  padding-bottom: 40px;
+}
+.showroom-img {
+  position: relative;
+  cursor: pointer;
+}
+.showroom-img::before,
+.showroom-img:after {
+  position: absolute;
+  content: "";
+  opacity: 0;
+}
+.showroom-img:after {
+  top: 30px;
+  right: 50px;
+  bottom: 30px;
+  left: 50px;
+  border-right: 1px solid #fff;
+  border-left: 1px solid #fff;
+  -webkit-transform: scale(1, 0);
+  transform: scale(1, 0);
+  -webkit-transform-origin: 100% 0;
+  transform-origin: 100% 0;
+}
+.showroom-img::before {
+  top: 50px;
+  right: 30px;
+  bottom: 50px;
+  left: 30px;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  -webkit-transform: scale(0, 1);
+  transform: scale(0, 1);
+  -webkit-transform-origin: 0 0;
+  transform-origin: 0 0;
+}
+
+.showroom-img:hover:after,
+.showroom-img:hover:before {
+  opacity: 1;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  transition: opacity 0.35s, transform 0.35s;
+}
+.showroom-img:hover:after {
+  transition-delay: 0.15s;
+}
 .showroom-content-img img {
-  border-radius: 12px;
+  /* border-radius: 12px; */
   height: 100%;
 }
-.showroom-content-img img:last-child {
+.showroom-img img:last-child {
   grid-column: 2 / 3;
   justify-self: center;
 }
@@ -5596,7 +5682,10 @@ h2.rv_name {
   .header-main-content {
     padding: 0;
   }
+  .showroom-content-img {
 
+    grid-template-columns: repeat( 2, 1fr );
+  }
   /* ==================== footer ========================== */
   .footer-content {
     flex-wrap: wrap;
@@ -5783,6 +5872,9 @@ h2.rv_name {
   .navbar-brand {
     width: 110px;
   }
+  .navbar-brand img {
+    object-fit: contain;
+  }
   .parsys_column2-content,
   .hero-bg-half-content,
   .parsy-column-content {
@@ -5841,6 +5933,10 @@ h2.rv_name {
   }
   .img-collection-roll {
     width: 100% !important;
+  }
+  .showroom-content-img {
+
+    grid-template-columns: repeat( 1, 1fr );
   }
 }
 /* ======================================================
