--- a/include/css/style.css
+++ b/include/css/style.css
@@ -2109,6 +2109,8 @@ h2.rv_name {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-size: 24px;
+  color: #fff;
 }
 
 .limit-gallery h2 {
@@ -4727,7 +4729,11 @@ h2.rv_name {
   left: -100%;
   width: 100%;
   height: 100%;
-  background: #f7f7f7;
+  /* background: #f7f7f7; */
+  background: rgb(231 231 231 / 10%);
+  backdrop-filter: blur(10px);
+  background-clip: padding-box;
+  box-shadow: 0px 10px 10px rgba(46, 54, 68, 0.03);
   transition: left 0.5s ease, opacity 0.7s ease;
   opacity: 0;
 }
