--- a/include/css/style.css
+++ b/include/css/style.css
@@ -1464,6 +1464,20 @@ ul:not([class]) > li:last-child {
   height: 100vh;
   object-fit: cover;
 }
+.bg-banner {
+  position: relative;
+}
+.bg-banner:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(0 0 0 / 10%);
+}
 .slider2-text {
   position: absolute;
   top: 50%;
@@ -1497,21 +1511,24 @@ ul:not([class]) > li:last-child {
   letter-spacing: 0.125rem;
   text-transform: uppercase;
 }
-
+.slider-center .slider-title:after,
+.slider-center .slider-title:hover:after {
+  display: none;
+}
 .slider-title {
-  font-size: 48px;
+  font-size: 40px;
   line-height: 60px;
   font-weight: 600;
-  color: transparent;
-  -webkit-text-stroke: 2px #333;
+  /* color: transparent; */
+  /* -webkit-text-stroke: 2px #333; */
   transition: all 0.5s;
 }
-.slider-title:hover {
+/* .slider-title:hover {
   color: #333;
   -webkit-text-stroke: 2px transparent;
-}
+} */
 .slider-title:after {
-  background: #333;
+  background: #fff;
   content: "";
   display: block;
   height: 2px;
@@ -1519,15 +1536,15 @@ ul:not([class]) > li:last-child {
   width: 0;
 }
 .slider-title:hover:after {
-  background: #333;
+  background: #fff;
   content: "";
   width: 100%;
 }
 
-.slider-text-banner {
+/* .slider-text-banner {
   color: #333;
   -webkit-text-stroke: 2px transparent;
-}
+} */
 /* .slider-text-banner:hover {
   -webkit-text-stroke: 2px transparent;
   color: #fff;
@@ -1537,9 +1554,12 @@ ul:not([class]) > li:last-child {
 .kh-slide__text-box {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 20px;
 }
-
+.slider-bg-text {
+  background: #1414148c;
+  padding: 10px;
+}
 .text-link {
   text-decoration: underline;
   font-size: 20px;
@@ -5524,6 +5544,10 @@ h2.rv_name {
     position: relative;
     right: inherit;
   }
+  .navbar-collapse,
+  .navbar-collapse.collapsing {
+    top: 80px;
+  }
 }
 /*==========================================
 ! Medium devices (tablets, less than 992px)
@@ -5536,6 +5560,10 @@ h2.rv_name {
   }
   .navbar-nav {
     flex-direction: column;
+  }
+  .navbar-collapse,
+  .navbar-collapse.collapsing {
+    top: 80px;
   }
   .navbar-toggler:focus {
     box-shadow: none;
@@ -5689,7 +5717,8 @@ h2.rv_name {
     width: 100%;
   }
   .slider-title {
-    font-size: 40px;
+    font-size: 36px;
+    line-height: 40px;
   }
   .search-container {
     display: none;
@@ -5734,11 +5763,11 @@ h2.rv_name {
   }
   .navbar-collapse,
   .navbar-collapse.collapsing {
-    top: 54px;
+    top: 59px;
   }
   .navbar-collapse,
   .navbar-collapse.collapsing {
-    width: 60%;
+    width: 70%;
   }
   .navbar-inside {
     padding: 40px;
@@ -5840,8 +5869,8 @@ h2.rv_name {
     position: relative;
   }
   .slider-title {
-    font-size: 20px;
-    line-height: 29px;
+    font-size: 28px;
+    line-height: 40px;
   }
   .banner-content-container .slick-prev,
   .banner-content-container .slick-next {
@@ -5934,7 +5963,9 @@ h2.rv_name {
   }
 
   .slider1 .subtitle {
-    font-size: 2rem;
+    font-size: 1rem;
+    line-height: 28px;
+    color: #000;
   }
   .slider1 {
     left: 50%;
